--- a/src/app/pages/about-us/our-clients/our-clients.component.html
+++ b/src/app/pages/about-us/our-clients/our-clients.component.html
@@ -34,7 +34,7 @@
 
     </div>
 </section>
-<app-people-saying></app-people-saying>
+<!-- <app-people-saying></app-people-saying> -->
 
 <section class="contactSection">
     <img src="assets/images/CONTACT-text.svg" alt="CONTACT-text" class="contact-text">
