--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -20,7 +20,7 @@
                         [routerLinkActiveOptions]="{exact:true}">Home</a>
                     <a routerLink="aboutUs" routerLinkActive="color-linearGradient"
                         class="subtitle20px colorTwo style-font">About us</a>
-                    <a routerLink="ourServcies" routerLinkActive="color-linearGradient"
+                    <a routerLink="ourServices" routerLinkActive="color-linearGradient"
                         class="subtitle20px colorTwo style-font">Our services</a>
                     <a routerLink="/aboutUs/ourPartners" routerLinkActive="color-linearGradient"
                         [routerLinkActiveOptions]="{exact:true}" class="subtitle20px colorTwo style-font">Our
