--- a/src/app/pages/contactUs/components/contact-us/contact-us.component.html
+++ b/src/app/pages/contactUs/components/contact-us/contact-us.component.html
@@ -2,7 +2,7 @@
     <div class="contactUsS1-container px-120">
         <div class="d-flex fx-contactUsS1">
             <div class="contactUsS1-text">
-                <span class="font-medium text-center subtitle24px color-linearGradient">Our certificates</span>
+                <span class="font-medium text-center subtitle24px color-linearGradient">Powering what’s next.</span>
                 <h1 class="font-bold subtitle64px colorBlack" data-aos="fade-down" data-aos-easing="linear"><span
                         class="color-linearGradient">Transformation</span> <br>Starts Here
                 </h1>
