--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -26,7 +26,7 @@
                         [routerLinkActiveOptions]="{exact:true}" class="subtitle20px colorTwo style-font">Our
                         partners</a>
                     <a routerLink="news" routerLinkActive="color-linearGradient"
-                        class="subtitle20px colorTwo style-font">Our news</a>
+                        class="subtitle20px colorTwo style-font">Insights</a>
                     <a routerLink="contactUs" routerLinkActive="color-linearGradient"
                         class="subtitle20px colorTwo style-font">Contact us</a>
                 </div>
