--- a/src/app/shared/navbar-des/navbar-des.component.html
+++ b/src/app/shared/navbar-des/navbar-des.component.html
@@ -78,11 +78,11 @@
             </div> -->
             <!-- <a routerLink="ourPartners" routerLinkActive="color-linearGradient" class="font-medium linkStyle">Our
                 partners</a> -->
-            <a routerLink="news" routerLinkActive="color-linearGradient" class="font-medium linkStyle">Our news</a>
+            <a routerLink="news" routerLinkActive="color-linearGradient" class="font-medium linkStyle">Insights</a>
             <a routerLink="contactUs" routerLinkActive="color-linearGradient" class="font-medium linkStyle">Contact
                 us</a>
         </div>
-        <div class="btn-header"><button routerLink="contactUs" routerLinkActive="active"
+        <div class="btn-header"><button type="button" (click)="openJoinUsModal()"
                 class="font-medium btn-linearGradient colorWhite" type="button">Join
                 us</button></div>
     </div>
