--- a/src/app/shared/navbar-mb/navbar-mb.component.html
+++ b/src/app/shared/navbar-mb/navbar-mb.component.html
@@ -68,13 +68,13 @@
                     </div>
                 </div> -->
                 <div class="border"></div>
-                <a routerLink="news" routerLinkActive="active" class="font-medium" (click)="closeSidenav()">Our news</a>
+                <a routerLink="news" routerLinkActive="active" class="font-medium" (click)="closeSidenav()">Insights</a>
                 <div class="border"></div>
                 <a routerLink="contactUs" routerLinkActive="active" class="font-medium" (click)="closeSidenav()">Contact
                     us</a>
                 <div class="border"></div>
                 <button type="button" routerLink="contactUs" routerLinkActive="active"
-                    class="btn-linearGradient colorWhite font-bold" (click)="closeSidenav()">Join us</button>
+                    class="btn-linearGradient colorWhite font-bold" (click)="openJoinUsModal()">Join us</button>
             </div>
         </div>
     </nav>
