--- a/src/assets/css/general.css
+++ b/src/assets/css/general.css
@@ -60,6 +60,18 @@ body {
   background-repeat: no-repeat;
   font-size: 1rem;
 }
+.coverBack {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  z-index: 96;
+}
 .text-danger{color: #dc3545;}
 main{position: relative;}
 a,button{cursor: pointer;}
@@ -90,10 +102,12 @@ p,button,a{font-size: 1rem;}.text-center{text-align: center;}.text-start{text-al
 .gap24{gap: 24px;}
 .mb24{margin-bottom: 24px;}
 .mb16{margin-bottom:16px;}
+.mb12{margin-bottom:16px;}
 @media (min-width:1920px) {
   .px-120{padding: 0 140px;}
   .px-100{padding: 0 120px;}
   .gap24{gap: 32px;}
+  .mb12{margin-bottom:16px;}
 }
 @media (max-width:1396.36px) {
   .px-120{padding: 0 100px;}
@@ -115,6 +129,7 @@ p,button,a{font-size: 1rem;}.text-center{text-align: center;}.text-start{text-al
   .px-120{padding: 0 50px;}
   .gap20{gap: 15px;}
   .mb24{margin-bottom:16px;}
+  .mb12{margin-bottom:8px;}
 }
 @media (max-width:877.71px) {
   .px-80{padding: 0 50px;}
