--- a/src/app/shared/navbar-des/navbar-des.component.html
+++ b/src/app/shared/navbar-des/navbar-des.component.html
@@ -8,12 +8,12 @@
             <!-- <a routerLink="/news/newsDetails/1" routerLinkActive="color-linearGradient"
                 class="font-medium linkStyle">newsDetails</a> -->
             <div class="btnServicesHeader" (mouseenter)="showCover()" (mouseleave)="hideCover()">
-                <button type="button" class="link d-flex align-items-center" data-target="Industries-list"
-                    routerLink="aboutUs" routerLinkActive="dropDownActive">
+                <button type="button" class="link d-flex align-items-center" data-target="Industries-list">
                     <span class="font-medium linkStyle">About us</span>
                     <img src="assets/images/arrowDown.svg" alt="arrowDown icon">
                 </button>
                 <div class="listAboutHeader">
+                    <a routerLink="aboutUs" routerLinkActive="active" class="font-medium subtitle16px ">About CODE</a>
                     <a routerLink="/aboutUs/ourClients" routerLinkActive="active" class="font-medium subtitle16px ">Our
                         clients</a>
                     <a routerLink="/aboutUs/ourPartners" routerLinkActive="active" class="font-medium subtitle16px">Our
