--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -17,18 +17,21 @@ text-decoration: none;
 footer .fxFooter .fxFooter-part1 .fxLinksFooter a:hover{
    font-weight: 600;
 }
-footer .fxFooter .fxFooter-part2 img{
+footer .fxFooter .fxFooter-part2 .logo{
     margin-bottom:24px;
     height: 100%;
+    width: 60%;
     object-fit: cover;
 }
+footer .fxFooter .fxFooter-part2 span,
 footer .fxFooter .fxFooter-part2 p{
-    margin-bottom: 27px;
-    padding-bottom: 27px;
-    border-bottom: 1px solid #C1C1C1;
+    margin-bottom: 20px;
+    text-align: start;
 }
-footer .fxFooter .fxFooter-part2 .fxFooter-icons{gap:8px;justify-content: center;}
-footer .fxFooter .fxFooter-part2 .fxFooter-icons img{margin-bottom: 0;}
+footer .fxFooter .fxFooter-part2 .fxFooter-icons{
+    gap:8px;
+}
+footer .fxFooter .fxFooter-part2 .fxFooter-icons img{margin-bottom: 0;object-fit: contain;}
 footer .fxFooter .fxFooter-part3 h2{margin-bottom: 28px;}
 footer .fxFooter .fxFooter-part3 p{margin-bottom: 16px;}
 /* copyright Style  */
@@ -60,7 +63,6 @@ footer .fxFooter .fxFooter-part3 p{margin-bottom: 16px;}
         flex: 1 1 calc(33.3% - 140px);
         max-width: calc(33.3% - 0px);
     }
-    footer .fxFooter .fxFooter-part2 p{padding-bottom: 20px;margin-bottom: 20px;}
     footer .fxFooter .fxFooter-part2 .fxFooter-icons img{width: 30px;height: 100%;}
      
 }
@@ -90,6 +92,9 @@ footer .fxFooter .fxFooter-part3 p{margin-bottom: 16px;}
         display: flex;
         flex-direction: column;
     }
+    footer .fxFooter .fxFooter-part3 p,
+    footer .fxFooter .fxFooter-part2 p,
+    footer .fxFooter .fxFooter-part2 span{text-align: center;font-size: 16px;}
     footer .fxFooter .fxFooter-part3 p br{display: none;}
     footer .fxFooter .fxFooter-part3 h2{margin-bottom: 20px;}
     footer .fxFooter .fxFooter-part1{
@@ -103,5 +108,13 @@ footer .fxFooter .fxFooter-part3 p{margin-bottom: 16px;}
     }
     footer .fxFooter .fxFooter-part1 h1{font-size: 20px;}
     footer .fxFooter .fxFooter-part1 a{font-size: 17px;}
+    footer .fxFooter .fxFooter-part1 p{font-size: 16px;}
+    footer .fxFooter .fxFooter-part2 .logo{
+        width: 80%;
+        margin: auto;
+        margin-bottom: 1rem;
+    }
+    footer .fxFooter .fxFooter-part2 .fxFooter-icons{justify-content: center;}
+    footer .fxFooter .fxFooter-part2 .fxFooter-icons img{width: 80px;}
 }
 @media (max-width:512px) {}
