--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,18 +3,21 @@
         <div class="fxGeneral-cards fxFooter">
             <div class="fxFooter-part2 fxGeneral-cards-st d-flex flex-column text-center">
                 <img src="assets/images/logo.svg" alt="code logo" class="logo">
-                <p class="style-font subtitle24px text-start">Empowering industry leaders in the Gulf and Middle East
-                    with
-                    AI-driven digital transformation</p>
+                <p class="style-font subtitle20px">Your Partner for AI Solutions That Connect Vision with
+                    Real-World Impact</p>
+                <span class="style-font subtitle20px">Get in Touch <br> sales&#64;code.sa</span>
                 <div class="d-flex align-items-center fxFooter-icons ">
-                    <a href="" class="transition3s"><img src="assets/images/facebook-icon.svg" alt="facebook icon"></a>
+                    <a href="https://www.linkedin.com/company/advance-code-it/posts/?feedView=all"
+                        class="transition3s"><img src="assets/images/linkedInFooter.svg" alt="linkedIn icon"></a>
+
+                    <!-- <a href="" class="transition3s"><img src="assets/images/facebook-icon.svg" alt="facebook icon"></a>
                     <a href="" class="transition3s"><img src="assets/images/instgram-icon.svg" alt="facebook icon"></a>
                     <a href="" class="transition3s"><img src="assets/images/twitter-icon.svg" alt="twitter icon"></a>
-                    <a href="" class="transition3s"><img src="assets/images/linkedin-icon.svg" alt="linkedin icon"></a>
+                    <a href="" class="transition3s"><img src="assets/images/linkedin-icon.svg" alt="linkedin icon"></a> -->
                 </div>
             </div>
             <div class="fxFooter-part1">
-                <h1 class="colorTwo subtitle36px font-medium">Quick links</h1>
+                <h1 class="colorTwo subtitle32px font-medium">Quick links</h1>
                 <div class="d-flex flex-column fxLinksFooter">
                     <a routerLink="/" routerLinkActive="color-linearGradient" class="subtitle20px colorTwo style-font"
                         [routerLinkActiveOptions]="{exact:true}">Home</a>
@@ -32,11 +35,10 @@
                 </div>
             </div>
             <div class="fxFooter-part3 fxGeneral-cards-st">
-                <h2 class="font-medium subtitle36px">Contact</h2>
-                <p class="subtitle20px style-font">Riyadh – Saudi Arabia <br>
-                    Egypt – Cairo</p>
+                <h2 class="font-medium subtitle32px">Contact</h2>
+                <p class="subtitle20px style-font">Intersection of Al Khair Street, Anas bin Malik Road, Al Malqa
+                    District – Riyadh 13524, Saudi Arabia</p>
                 <p class="subtitle20px style-font">Need help? Call us <br> <b>+966542828120</b></p>
-                <p class="subtitle20px style-font mb-0"> sales&#64;code.sa</p>
             </div>
         </div>
         <div class="copyright">
