--- a/src/app/shared/navbar-des/navbar-des.component.html
+++ b/src/app/shared/navbar-des/navbar-des.component.html
@@ -9,7 +9,7 @@
                 class="font-medium linkStyle">newsDetails</a> -->
             <div class="btnServicesHeader" (mouseenter)="showCover()" (mouseleave)="hideCover()">
                 <button type="button" class="link d-flex align-items-center" data-target="Industries-list">
-                    <span class="font-medium linkStyle">About us</span>
+                    <span class="font-medium linkStyle">About Us</span>
                     <img src="assets/images/arrowDown.svg" alt="arrowDown icon">
                 </button>
                 <div class="listAboutHeader">
