--- a/src/app/shared/navbar-mb/navbar-mb.component.html
+++ b/src/app/shared/navbar-mb/navbar-mb.component.html
@@ -24,7 +24,7 @@
                 <div class="btnServicesMb">
                     <button type="button" class="link d-flex align-items-center justify-content-between w-100"
                         (click)="toggleAboutUsList()">
-                        <span class="font-medium linkStyle" (click)="closeSidenav()">About us </span>
+                        <span class="font-medium linkStyle" (click)="closeSidenav()">About Us </span>
                         <img src="assets/images/arrowDown.svg" alt="arrowDown icon" [class.rotated]="aboutUsListOpen" />
                     </button>
                     <div class="listServices" [class.active]="aboutUsListOpen">
