--- a/src/app/shared/modal-join-us/modal-join-us.component.html
+++ b/src/app/shared/modal-join-us/modal-join-us.component.html
@@ -12,8 +12,8 @@
                         Build Saudi Arabia’s Digital <br>
                         Future with <span class="color-linearGradient">CODE</span>
                     </h1>
-                    <button type="button" (click)="close()"><img src="assets/images/closeIcon.svg" alt="closeIcon.svg"
-                            class="closeIcon inMobile"></button>
+                    <button type="button" class="inMobile" (click)="close()"><img src="assets/images/closeIcon.svg"
+                            alt="closeIcon.svg" class="closeIcon "></button>
 
                 </div>
 
